--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,10 +1,67 @@
-#ppimg,h1 {
-    border-radius: 15px;
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
+#ppimg {
+  border-radius: 15px;
 }
 
-.header{
-    align-content: center;
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Align items to the top of the container */
+  width: 100%;
+  height: 1000px;
+  /* This will make the header take the full height of the viewport. */
+  text-align: center;
+  /* Center the text horizontally within the container. */
+}
+
+h1 {
+  margin-left: 10px;
+  /* Add some space between the image and text */
+
+}
+
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+
+body {
+  padding: 60px;
+  background-color: #121212;
+}
+
+h1 {
+  border-right: solid 3px rgba(0, 255, 0, .75);
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 50px;
+  color: rgba(255, 255, 255, .70);
+}
+
+/* Animation */
+h1 {
+  animation: animated-text 4s ease-in 1s 1 normal both,
+    animated-cursor 600ms steps(30, end) infinite;
+}
+
+/* text animation */
+
+@keyframes animated-text {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 640px;
+  }
+}
+
+/* cursor animations */
+
+@keyframes animated-cursor {
+  from {
+    border-right-color: rgba(0, 255, 0, .75);
+  }
+
+  to {
+    border-right-color: transparent;
+  }
 }
